# Item-Parser-for-Magic-Rampage

./: .gitignore  LICENSE  README.md  app.py  armor_code.txt  armor_ring_parser.py  class_parser.py  config.py  diff_checker.py  enemy_parser.py  exporters.py  file_parser.py  filter_util.py  formatter.py  items.json  language_getter.py  main.py  models.py  online_data.py  parser.py  parser_utils.py  pipeline.py  pyproject.toml  strings.xml  weapon_parser.py
.github/workflows/: tests.yml
lang/: new.strings  sheet-symbols.txt
lang/de/: achievements.strings  emotes.strings  items.strings  skin-names.strings  speech.strings  tips.strings  ui.strings  weekly-dungeons.strings
lang/en/: achievements.strings  emotes.strings  items.strings  skin-names.strings  speech.strings  tips.strings  ui.strings  weekly-dungeons.strings
lang/es/: achievements.strings  emotes.strings  items.strings  skin-names.strings  speech.strings  tips.strings  ui.strings  weekly-dungeons.strings
lang/fr/: achievements.strings  emotes.strings  items.strings  skin-names.strings  speech.strings  tips.strings  ui.strings  weekly-dungeons.strings
lang/it/: achievements.strings  emotes.strings  items.strings  skin-names.strings  speech.strings  tips.strings  (+2 more)
templates/: index.html
tests/: test_class_parser.py  test_config.py  test_enemy_parser.py  test_file_parser.py  test_formatter.py  test_language_getter.py  test_main.py  test_offline_fallback.py  test_online_data.py  test_online_matching.py  test_parser_utils.py  test_pipeline.py  test_weapon_parser.py
translations/: unmatched.xml
(+50 files in other folders)
