[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "magic-rampage-item-parser"
version = "0.1.0"
description = "Parsers and exporters for Magic Rampage item, class, and enemy data."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31,<3",
    "flask>=3.0,<4",
]

[tool.setuptools]
py-modules = [
    "app",
    "armor_ring_parser",
    "class_parser",
    "config",
    "diff_checker",
    "enemy_parser",
    "exporters",
    "file_parser",
    "filter_util",
    "formatter",
    "language_getter",
    "main",
    "models",
    "online_data",
    "parser_utils",
    "pipeline",
    "weapon_parser",
]
